# 5DCUI

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: 5dc_event.h  5dc_global_data.h  5dc_interface.cpp  5dc_interface.h  5dc_renderer.h  5dc_texture.h  5dc_ui_app.cpp  5dc_ui_app.h  5dc_ui_controls.h  5dc_widgets.h  minifiledialog.h
src/assets/: bishop-black.svg.hpp  bishop-white.svg.hpp  brawn-black.svg.hpp  brawn-white.svg.hpp  commonking-black.svg.hpp  commonking-white.svg.hpp  dragon-black.svg.hpp  dragon-white.svg.hpp  king-black.svg.hpp  king-white.svg.hpp  knight-black.svg.hpp  knight-white.svg.hpp  pawn-black.svg.hpp  pawn-white.svg.hpp  princess-black.svg.hpp  princess-white.svg.hpp  queen-black.svg.hpp  queen-white.svg.hpp  rook-black.svg.hpp  rook-white.svg.hpp  royalqueen-black.svg.hpp  royalqueen-white.svg.hpp  unicorn-black.svg.hpp  unicorn-white.svg.hpp
